examples/test/testpolicy11008.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11008
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key20: value46
      key5: value12
      key45: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value45
          key20: value32
          key17: value40
